--- a/report/report/report.tex
+++ b/report/report/report.tex
@@ -15,6 +15,7 @@
 
 %============================================================================================
 \chapter{Theory}
+\label{theory:chapter}
 \input{theory.tex}
 \input{theory_proofs.tex}
 \input{related.tex}
@@ -22,10 +23,12 @@
 
 %============================================================================================
 \chapter{Algorithms}
+\label{Algorithms:chapter}
 \input{../algorithms/algorithms.tex}
 
 %============================================================================================
 \chapter{Applications}
+\label{applications:chapter}
 \input{../applications/applications.tex}
 
 %============================================================================================
