--- a/report/report/related.tex
+++ b/report/report/related.tex
@@ -2,59 +2,66 @@
 
 \section{Related Problems and Extensions}
 
+In this section we discuss a number of problems and extensions related to the Robust PCA framework. We will much briefer in our discussion than for the classic case and mainly provide an outlook on where the field going and what the most important references are. 
+
+
 
 %-----------------------------------------------------------------------------------------------------------------------------------------------------------------
 \subsection{Exact Matrix completion}
-Robust PCA is an extension of the exact matrix completion problem introduced in \cite{Candes:2009uq}, where one seeks to recover a low-rank matrix $L_0$ from a small fraction of its entries. More precisely, assume one is given $\{(L_0)_{ij}, (i,j)\in \Omega\}$ where $\Omega$ is a subset of $[n]\times [n]$. The observed matrix in this case is 
+Robust PCA is an extension of the exact matrix completion problem that was introduced in~\cite{Candes:2009uq}, where one seeks to recover a low-rank matrix $L_0$ from a small fraction of its entries. More precisely, assume one is given $\{(L_0)_{ij}, (i,j)\in \Omega\}$ where $\Omega$ is a subset of $[n]\times [n]$. The observed matrix in this case is 
 \[
 M = P_\Omega L_0
 \]
 where $P_\Omega$ denotes the sampling operator, i.e. the orthogonal projection on the subspace of matrices supported on $\Omega$. One seeks to solve the problem
-
+%
 \begin{equation}
 \begin{aligned}
 &\text{minimize} && \text{rank}(L) \\
 &\text{subject to} && P_\Omega L = P_\Omega L_0
 \end{aligned}
+\label{theory:Related:ExactMatComp:exact}
 \end{equation}
-
-
-A heuristic is to minimize the nuclear norm of $L$, $\|L\|_* = \|\sigma(L)\|_1$ which encourages sparsity of the vector of singular components of $L$, and can thus be considered an approximation of the rank operator, similarly to the $\ell_1$-norm that can be considered an approximation of the $\ell_0$ count operator.
-
+%
+A popular heuristic is to minimize the nuclear norm of $L$, $\|L\|_* = \|\sigma(L)\|_1$ which encourages sparsity of the vector of singular components of $L$, and can thus be interpreted as an approximation of the rank operator, similarly to the $\ell_1$-norm that can be considered an approximation of the $\ell_0$ count operator. The approximate problem then reads
+%
 \begin{equation}
 \begin{aligned}
 &\text{minimize} && \|L\|_* \\
 &\text{subject to} && P_\Omega L = P_\Omega L_0
 \end{aligned}
+\label{theory:Related:ExactMatComp:heuristic}
 \end{equation}
 
 
 %-------------------------------------------------------------------------
 \subsubsection{Incoherence}
-
-In order to guarantee recovery with high probability, an incoherence condition is introduced, similar to the one in the Robust PCA framework, though slightly different. First consider an orthogonal matrix $U = [u_1, \dots, u_n]$, and define its coherence of $\mu(U)$ with respect to the canonical basis to be
-
+%
+In order to guarantee recovery with high probability, an incoherence condition is introduced. This condition is similar to the one that appears in the Robust PCA framework, though slightly different. First consider an orthogonal matrix $U = [u_1, \dots, u_n]$, and define its coherence of $\mu(U)$ with respect to the canonical (euclidean) basis to be
+%
 \begin{equation}
-\mu(U) = \frac{n}{r} \max_i \|P_U e_i\|_2^2 = \frac{n}{r} \max_i \left[ \sum_{k=1}^r u_{ki}^2 \right]
+\mu(U) = \frac{n}{r} \max_i \|P_U e_i\|_2^2 = \frac{n}{r} \max_i \left[\, \sum_{k=1}^r u_{ki}^2 \,\right]
 \label{emc_incoherence}
 \end{equation}
+%
+The coherence~$\mu(U)$ is a measure of spread of the vectors $u_1, \dots, u_n$ with respect to the canonical basis. One seeks matrices with low coherence, since intuitively those matrices will have low probability to be in the null space of the sampling operator~$P_\Omega$.
 
-$\mu(U)$ is a measure of spread of the vectors $u_1, \dots, u_n$ with respect to the canonical basis. One seeks matrices with low coherence, since intuitively, those matrices will have low probability to be in the null space of the sampling operator $P_\Omega$.
+
 %------------------------------------------------------------------------------
 \subsubsection{Main result}
-\begin{theorem}
+%
+\begin{theorem}[\cite{Candes:2009uq}]
 \label{thm:exact_matrix_recovery}
-Let the SVD of original matrix $L_0$ be given by $L_0 = U \Sigma V^T$, and assume that the following conditions hold:
+Let the (slim) SVD of the original matrix $L_0$ be given by $L_0 = U \Sigma V^T$, and assume that the following conditions hold:
 \begin{itemize}
 \item $\max \{\mu(U), \mu(V)\} \leq \mu_0$
 \item $\left( \sum_k u_kv_k^T\right)_{ij} \leq \mu_1 \sqrt{\frac{r}{n_1 n_2}}$ (true for $\mu_1 = \mu_0\sqrt{r}$)
-\item $m \geq c \max \{ \mu_1^2, \sqrt{\mu_0}\mu_1, \mu_0 n^{1/4}\}n r \beta \log n$
+\item $m \geq c \max \left\{ \mu_1^2, \sqrt{\mu_0}\mu_1, \mu_0 n^{1/4} \right\}n r \beta \log n$
 \end{itemize}
-Then recovery is exact with high probability (at least $1-\frac{c}{n\beta}$)
+Then recovery is exact with high probability (at least $1-\frac{c}{n\beta}$).
 \end{theorem}
 
 
-The authors also give a list of models that can be used to generate incoherent matrices. Let the SVD of $L_0$ be given by $L_0 = \sum_k \sigma_k u_k v_k^*$. Then $L_0$ is incoherent with high probability if it is sampled from:
+The authors of~\cite{Candes:2009uq} also give a list of models that can be used to generate incoherent matrices. Let the SVD of $L_0$ be given by $L_0 = \sum_{k=1}^r \sigma_k u_k v_k^*$. Then $L_0$ is incoherent with high probability if it is sampled from:
 \begin{itemize}
 \item The incoherent basis model: $U$ and $V$ satisfy the size property
 \[
@@ -67,25 +74,28 @@ for some numerical constant $\mu_B$. Observe that under these conditions, one ca
 \item The random orthogonal model: if , then $\{u_1, \dots, u_r\}$ and $\{v_1, \dots, v_r\}$ are assumed to be selected at random.
 \end{itemize}
 
-%-------------------------------------------------------------------------
-\subsubsection{SDP formulation}
 
-Observe that the problem is equivalent to the SDP
-\begin{equation}
-\begin{aligned}
-&\text{minimize}_{L, W_1, W_2} && tr(W_1) + tr(W_2) \\
-&\text{subject to} && P_\Omega L = P_\Omega L_0\\
-&&& \left[ \begin{array}{cc}
-W_1 & L \\
-L^T & W_2
-\end{array} \right] \succeq 0
-\end{aligned}
-\end{equation}
-%TODO: show equivalence
+%Max Apr 29: Do we need the SDP formulation part? Are we using it anywhere?
+%%-------------------------------------------------------------------------
+%\subsubsection{SDP formulation}
+%%
+%Observe that the problem~\eqref{theory:Related:ExactMatComp:heuristic} is equivalent to the SDP
+%\begin{equation}
+%\begin{aligned}
+%&\text{minimize}_{L, W_1, W_2} && tr(W_1) + tr(W_2) \\
+%&\text{subject to} && P_\Omega L = P_\Omega L_0\\
+%&&& \left[ \begin{array}{cc}
+%W_1 & L \\
+%L^T & W_2
+%\end{array} \right] \succeq 0
+%\end{aligned}
+%\end{equation}
+%%TODO: show equivalence
 
 %-------------------------------------------------------------------------
-\subsubsection{Comparing results to Robust PCA}
-Robust PCA can be thought of as an extension of the matrix completion problem, where instead of having a known subset of the entries $\{(L_0)_{ij}, (i,j)\in \Omega\}$ and the rest is missing, we have an unknown subset of the entries and the rest is corrupted. In this sense, Robust PCA is a harder problem.
+\subsubsection{Relation to Robust PCA}
+%
+Robust PCA can be thought of as an extension of the matrix completion problem, where instead of being given a known subset of the entries $\{(L_0)_{ij}, (i,j)\in \Omega\}$ and the rest is missing, we have exact information about an unknown subset of the entries and the rest of the entries is corrupted. In this sense, Robust PCA is a harder problem.
 
 Note that the matrix $L_0$ can be recovered by Principal Component Pursuit, solving a different problem:
 \begin{equation}
@@ -107,14 +117,13 @@ Here the original data matrix $L_0$ is assumed to be corrupted with the noise ma
 
 %-----------------------------------------------------------------------------------------------------------------------------------------------------------------
 \subsection{Stable Principal Component Pursuit}
-\subsubsection{Overview}
 
-The paper studies the problem of recovering a low-rank matrix (the principal components) from a high- dimensional data matrix despite both small entry-wise noise and gross sparse errors. It proves that the solution to a convex program (a relaxation of classic Robust PCA) gives an estimate of the low-rank matrix that is simultaneously stable to small entry- wise noise and robust to gross sparse errors. The result shows that the proposed convex program recovers the low-rank matrix even though a positive fraction of its entries are arbitrarily corrupted, with an error bound proportional to the noise level.
+One issue with Robust PCA that limits its practical applicability is the assumption that, while part of the data may be arbitrarily corrupted, the rest of the data is exact. In most applications, however, there will also be some small but non-sparse noise component present, caused for example by basic measurement inaccuracies, quantization or compression effects and so on. In~\cite{Zhou:2010vn} the authors therefore study the problem of recovering a low-rank matrix (the principal components) from a high-dimensional data matrix despite both small entry-wise noise and gross sparse errors. It proves that the solution to a convex program (a relaxation of classic Robust PCA) gives an estimate of the low-rank matrix that is simultaneously stable to small entry- wise noise and robust to gross sparse errors. The result shows that the proposed convex program recovers the low-rank matrix even though a positive fraction of its entries are arbitrarily corrupted, with an error bound proportional to the noise level.
 
 %-----------------------------------------------------------------------------
 \subsubsection{Main result}
 
-The paper consider a matrix $M\in\mathbb{R}^{n_1\times n_2}$ of the from $M = L_0+S_0+Z_0$, where~$L_0$ is (non-sparse) low rank, $S_0$ is sparse (modeling gross errors) and $Z_0$ is ``small'' (modeling a small noisy perturbation). The assumption on~$Z_0$ is simply that $||Z_0||_F \leq \delta$ for some small known~$\delta$. Hence at least for the theory part of the paper the authors do not assume anything about the distribution of the noise other than it is bounded (however they will gloss over this in their algorithm).
+The paper~\cite{Zhou:2010vn} consider a matrix $M\in\mathbb{R}^{n_1\times n_2}$ of the from $M = L_0+S_0+Z_0$, where~$L_0$ is (non-sparse) low rank, $S_0$ is sparse (modeling gross errors) and $Z_0$ is ``small'' (modeling a small noisy perturbation). The assumption on~$Z_0$ is simply that $||Z_0||_F \leq \delta$ for some small known~$\delta$. Hence at least for the theory part of the paper the authors do not assume anything about the distribution of the noise other than it is bounded (however they will gloss over this in their algorithm).
 
 The convex program to be solved is a slight modification of the standard Robust PCA problem and given by
 \begin{align}
@@ -130,14 +139,14 @@ where $\lambda = 1/\sqrt{n_1}$. Under a standard incoherence assumption on~$L_0$
 \end{align*}
 where~$C$ is a numerical constant. The above claim essentially states that the recovered low-rank matrix~$\hat{L}$ is stable with respect to non-sparse but small noise acting on all entries of the matrix.
 
-In order to experimentally verify the predicted performance to their formulation, the author provide a comparison with an oracle. This oracle is assumed to provide information about the support of~$S_0$ and the row and column spaces of~$L_0$, which allows the computation of the MMSE estimator which otherwise would be computationally intractable (strictly speaking it of course is not really the MMSE, since it uses additional information from the oracle). Simulation results that show that the RMS error of the solution obtained through~\eqref{mainresult:optproblem} in the non-breakdown regime (that is, for the support of~$S_0$ sufficiently small) is only about twice as large as that of the oracle-based MMSE. This suggests that the proposed algorithm works quite well in practice.
+In order to experimentally verify the predicted performance to their formulation, the authors provide a comparison with an oracle. This oracle is assumed to provide information about the support of~$S_0$ and the row and column spaces of~$L_0$, which allows the computation of the MMSE estimator which otherwise would be computationally intractable (strictly speaking it of course is not really the MMSE, since it uses additional information from the oracle). Simulation results that show that the RMS error of the solution obtained through~\eqref{mainresult:optproblem} in the non-breakdown regime (that is, for the support of~$S_0$ sufficiently small) is only about twice as large as that of the oracle-based MMSE. This suggests that the proposed algorithm works quite well in practice. But since efficient algorithms that are practical also for large-scale problems have been proposed only recently, there does not seem to have been much work on applications yet. 
 
 
 
 %-----------------------------------------------------------------------------
 \subsubsection{Relations to existing work}
 
-The result of the paper can be seen from two different view points. On the one hand, it can be interpreted from the point of view of standard PCA. In this case, the result states that standard PCA, which can in fact be shown to be statistically optimal w.r.t. i.i.d Gaussian perturbations, can also be made robust with respect to sparse gross corruptions. On the other hand, the result can be interpreted from the point of view of Robust PCA. In this case, it essentially states that the classic Robust PCA solution can itself be made robust with respect to some small but non-sparse noise acting on all entries of the matrix.
+The result of the paper can be seen from two different view points. On the one hand, it can be interpreted from the point of view of classic PCA. In this case, the result states that classic PCA, which can in fact be shown to be statistically optimal w.r.t. i.i.d Gaussian perturbations, can also be made robust with respect to sparse gross corruptions. On the other hand, the result can be interpreted from the point of view of Robust PCA. In this case, it essentially states that the classic Robust PCA solution can itself be made robust with respect to some small but non-sparse noise acting on all entries of the matrix.
 
 Conceptually, the work presented in the paper is similar to the development of results for ``imperfect'' scenarios in compressive sensing where the measurements are noisy and the signal is not exact sparse. In this body of literature, $l_1$-norm minimization techniques are adapted to recover a vector $x_0 \in \mathbb{R}^n$ from contaminated observations $y=Ax_0+z$, where $A \in \mathbb{R}^{m\times n}$ with $m \ll n$ and z is the noise term.
 
@@ -145,7 +154,7 @@ Conceptually, the work presented in the paper is similar to the development of r
 %-----------------------------------------------------------------------------
 \subsubsection{Algorithm}
 
-For the case of a noise matrix~$Z_0$ whose entries are i.i.d. $\Ncal(0,\sigma^2)$, the paper suggests to use an Accelerated Proximal Gradient (APG) algorithm (see algorithms section for details) for solving~\eqref{mainresult:optproblem}. Note that for~$\delta =0$ the problem reduces to the standard Robust PCA problem with an equality constraint on the matrices. For this case the APG algorithm proposed in~\cite{Lin:2009kx} solves an approximation of the form
+For the case of a noise matrix~$Z_0$ whose entries are i.i.d. $\Ncal(0,\sigma^2)$, the paper suggests to use an Accelerated Proximal Gradient (APG) algorithm (see section~\ref{Algorithms:MainAlgs:PGM:Subsec} for details) for solving~\eqref{mainresult:optproblem}. Note that for~$\delta =0$ the problem reduces to the standard Robust PCA problem with an equality constraint on the matrices. For this case the APG algorithm proposed in~\cite{Lin:2009kx} solves an approximation of the form
 \begin{align*}
 \min_{L,S} \; &||L||_* + \lambda ||S||_1 + \frac{1}{2\mu} ||M-L-S||_F
 \end{align*}
@@ -156,54 +165,55 @@ It is worth noting that the assumption of a Gaussian noise matrix~$Z_0$ is reaso
 
 
 %-----------------------------------------------------------------------------
-\subsubsection{Conclusion and Outlook}
+\subsubsection{Conclusion}
 
-The paper addresses a problem of potentially very high practical relevance. While it is reasonable to assume that in many applications the low-rank component~$L_0$ will only be corrupted by a comparatively small number of gross errors (caused by rare and isolated events), the assumption of perfect measurements for the rest of the data outside the support of~$S_0$ that is made in classic Robust PCA will generally not hold for example due to sensor noise. This paper asserts that if the non-sparse noise component~$Z_0$ is sparse, then with high probability the recovered components are ``close'' to the actual ones.
+The Stable PCP problem is one of potentially very high practical relevance. While it is reasonable to assume that in many applications the low-rank component~$L_0$ will only be corrupted by a comparatively small number of gross errors (caused by rare and isolated events), the assumption of perfect measurements for the rest of the data outside the support of~$S_0$ that is made in classic Robust PCA will generally not hold for example due to sensor noise. This paper asserts that if the non-sparse noise component~$Z_0$ is sparse, then with high probability the recovered components are ``close'' to the actual ones.
 
-For simplicity, the paper models the non-sparse noise simply as an additive perturbation that is bounded in the Frobenius norm. In cases where one has additional information available about this noise, for example its distribution or some bounds on the absolute value of each entry, it might be possible to derive better bounds on the resulting errors. One possible extension could therefore be to look at exploiting structure in the noise.
+For simplicity, the paper~\cite{Zhou:2010vn} models the non-sparse noise simply as an additive perturbation that is bounded in the Frobenius norm. In cases where one has additional information available about this noise, for example its distribution or some bounds on the absolute value of each entry, it might be possible to derive better bounds on the resulting errors. One possible extension could therefore be to look at exploiting structure in the noise.
 
-One thing the paper claims is that ``at a cost not so much higher than the classical PCA, [the] result is expected to have significant impact on many practical problems''. As mentioned above I do agree that the result has a significant impact on many practical problems. However, the claim concerning the computational complexity is very optimistic. The fastest solver for the special case $\delta =0$ (classic Robust PCA) currently seems to be a alternating directions augmented Lagrangian method. This method requires an SVD at each iteration, and for problems involving large-scale data the number of iterations can be very large. The standard PCP algorithm on the other hand is based on a single SVD, hence it can be computed much faster.
+One thing the paper claims is that ``at a cost not so much higher than the classical PCA, [the] result is expected to have significant impact on many practical problems''. As mentioned above, one can indeed expect that the result has a significant impact on many practical problems. However, the claim concerning the computational complexity is very optimistic. The fastest solver for the special case $\delta =0$ (classic Robust PCA) currently seems to be a alternating directions augmented Lagrangian method (see Chapter~\ref{Algorithms:chapter}). This method requires an SVD at each iteration, and for problems involving large-scale data the number of iterations can be very large. The standard PCP algorithm on the other hand is based on a single SVD, hence it can be computed much faster.
 
 
 %-----------------------------------------------------------------------------------------------------------------------------------------------------------------
 \subsection{Robust Alignment by Sparse and Low-rank Decomposition}
 \label{subsec: RASL}
 
-The convex optimization framework for low-rank matrix recovery has been employed successfully. However, in practice, much more data can be viewed as low-rank only after some transformation is applied. The new formulation of this problem as Robust Alignment by Sparse and Low-rank Decomposition (RASL) \cite{Peng:2010}:
+The convex optimization framework for low-rank matrix recovery has been employed successfully as seen in the previous discussion of the Robust PCA problem. However, in many cases in practice the data can be viewed as low-rank only after some transformation is applied. The associated recovery problem has been dubbed Robust Alignment by Sparse and Low-rank Decomposition (RASL) and was investigated in~\cite{Peng:2010}. The formulation of this problem is the following:
+%
 \begin{align}
-\min_{A, E, \tau}  ||A||_{*} + \lambda||E||_{1} \quad  \text{s.t.} \;  D\circ\tau = A+E
+\min_{L, S, \tau}  ||L||_{*} + \lambda||S||_{1} \quad  \text{s.t.} \;  M\circ\tau = L+S
 \label{eq:rasl:original}
 \end{align}
-where $A  \in\mathbb{R}^{m\times n}$ is low-rank matrix, $A\in\mathbb{R}^{m\times n}$ is sparse matrix, $D$ is our measurements, which is the result of $(A+E)$ subjecting to transformation $\tau^{-1}$. Here we assume that the transformation is invertible.
-We define $D\circ\tau$ as: $D\circ\tau = [\;D_{1}\circ\tau_{1} \;|\;D_{2}\circ\tau_{2} \;|\; \dots \;|\; D_{n}\circ\tau_{n}\;]$, which is the measurements $D=[\;D_{1} \;|\;D_{2} \;|\; \dots \;|\; D_{n}\;] $subjects to set of transformations $\tau=[\;\tau_{1} \;|\;\tau_{2} \;|\; \dots \;|\; \tau_{n}\;] \in\mathbb{G}^n$, where $\mathbb{G}$ is a group of certain type of invertible transformations, which could be affine transform, rotation transform, etc.  \\
+%
+Here $L \in\mathbb{R}^{m\times n}$ is the low-rank matrix, $S\in\mathbb{R}^{m\times n}$ is a sparse corruption matrix and~$M\in\mathbb{R}^{m\times n}$ contains the measurements, which are the result of the transformation $\tau^{-1}$ applied to the matrix $(L+S)$. The authors in~\cite{Peng:2010} assume that the transformation is invertible. Define $M\circ\tau$ as: $M\circ\tau = [\;M_{1}\circ\tau_{1} \;|\;M_{2}\circ\tau_{2} \;|\; \dots \;|\; M_{n}\circ\tau_{n}\;]$, which are the measurements $M=[\;M_{1} \;|\;M_{2} \;|\; \dots \;|\; M_{n}\;]$ subject to the set of transformations $\tau=[\;\tau_{1} \;|\;\tau_{2} \;|\; \dots \;|\; \tau_{n}\;] \in\mathbb{G}^n$, where $\mathbb{G}$ is a group of certain type of invertible transformations, which could be affine transform, rotation transform, etc.  \\
 
-The main difficulty in solving ~\eqref{eq:rasl:original} is the nonlinearity of constraint $D\circ\tau = A+E$. When the change in $\tau$ is small, we can approximate this constraint by linearizing about the current estimate of $\tau$. Here, we assume that $\mathbb{G}$ is some $p$-parameter group and identify $\tau=[\;\tau_{1} \;|\;\tau_{2} \;|\; \dots \;|\; \tau_{n}\;] \in \mathbb{R}^{p\times n}$ with the parameterizations of all of the transformations. For $\Delta\tau = [\;\Delta\tau_{1} \;|\; \Delta\tau_{2} \;|\; \dots \;|\; \Delta\tau_{n}\;]$, write $D\circ(\tau+\Delta\tau) \approx D\circ\tau + \sum_{i=1}^n J_{i}\Delta\tau_{i}\epsilon_{i}$, where $J_{i} \doteq \frac{\partial}{\partial\zeta}(D_{i}\circ\zeta)|_{\zeta = \tau_{i}}$ is the Jacobian of the $i$-th measurement with respect to the transformation parameters $\tau_{i}$. $\{\epsilon_{i}\}$ denotes the standard basis for $\mathbb{R}^n$. This leads to a convex optimization problem in unknowns $A, E, \Delta\tau$:
+The main difficulty in solving ~\eqref{eq:rasl:original} is the nonlinearity of the equality constraint $M\circ\tau = L+S$. When the change induced by $\tau$ is small, one can approximate this constraint by linearizing about the current estimate of the transformation $\tau$. Suppose now that $\mathbb{G}$ is some $p$-parameter group and identify $\tau=[\;\tau_{1} \;|\;\tau_{2} \;|\; \dots \;|\; \tau_{n}\;] \in \mathbb{R}^{p\times n}$ with the parameterizations of all of the transformations. For $\Delta\tau = [\;\Delta\tau_{1} \;|\; \Delta\tau_{2} \;|\; \dots \;|\; \Delta\tau_{n}\;]$, write $M\circ(\tau+\Delta\tau) \approx M\circ\tau + \sum_{i=1}^n J_{i}\Delta\tau_{i}e_{i}$, where $J_{i} \doteq \frac{\partial}{\partial\zeta}(M_{i}\circ\zeta)|_{\zeta = \tau_{i}}$ is the Jacobian of the $i$-th measurement with respect to the parameters $\tau_{i}$ and $\{e_{i}\}$ denotes the standard basis for $\mathbb{R}^n$. This leads to a convex optimization problem involving the variables $L, S, \Delta\tau$:
+%
 \begin{align}
-\min_{A, E, \Delta\tau}  ||A||_{*} + \lambda||E||_{1}  \quad \text{s.t.} \;  D\circ\tau + \sum_{i=1}^n J_{i}\Delta\tau\epsilon_{i}\epsilon_{i}^{T}= A+E
+\min_{L, S, \Delta\tau}  ||L||_{*} + \lambda||S||_{1}  \quad \text{s.t.} \;  M\circ\tau + \sum_{i=1}^n J_{i}\Delta\tau e_{i}e_{i}^{T}= L+S
 \label{eq:rasl:linearized}
 \end{align}
-It leads to algorithm~\ref{alg:RASL}
 
 
-
-
+Using a successive approximation of the changes~$\Delta \tau$ leads to Algorithm~\ref{alg:RASL}.
+%
 \begin{algorithm}[h!]
-\label{alg:RASL}
 \caption{RASL}
-\KwIn{$D = [\; D_{1} \;|\; D_{2} \;|\; \dots \;|\; D_{n}]$, initial transformation $\tau_{1}, \tau_{2}, \dots, \tau_{n}$ in a certain parametric group $\mathbb{G}$, weight $\lambda > 0$.}
+\KwIn{$M = [\; M_{1} \;|\; M_{2} \;|\; \dots \;|\; M_{n}]$, initial transformation $\tau_{1}, \tau_{2}, \dots, \tau_{n}$ in a certain parametric group $\mathbb{G}$, weight $\lambda > 0$.}
 \While{not converged}{
 \textbf{Step 1:} compute Jacobian matrices w.r.t. transformation: %$J_{i} \leftarrow \frac{\partial}{\partial\zeta}(D_{i}\circ\zeta)|_{\zeta = \tau_{i}}$ \\
 \begin{equation}
-J_{i} \leftarrow \frac{\partial}{\partial\zeta}(D_{i}\circ\zeta)|_{\zeta = \tau_{i}} \nonumber
+J_{i} \leftarrow \frac{\partial}{\partial\zeta}(M_{i}\circ\zeta)|_{\zeta = \tau_{i}} \nonumber
 \end{equation}
 \textbf{Step 2 (inner loop):} solve the linearized convex optimization:
 \begin{equation}
-(A^{*}, E^{*}, \Delta\tau^{*}) \leftarrow \argmin_{A, E, \Delta\tau}  ||A||_{*} + \lambda||E||_{1}  \quad \text{s.t.} \;  D\circ\tau + \sum_{i=1}^n J_{i}\Delta\tau\epsilon_{i}\epsilon_{i}^{T}= A+E  \nonumber
+(L^{*}, S^{*}, \Delta\tau^{*}) \leftarrow \argmin_{L, S, \Delta\tau}  ||L||_{*} + \lambda||S||_{1}  \quad \text{s.t.} \;  M\circ\tau + \sum_{i=1}^n J_{i}\Delta\tau e_{i}e_{i}^{T}= L+S  \nonumber
 \end{equation}
 \textbf{Step 3:} update the transformation: $\tau \leftarrow \tau + \Delta\tau^{*}$
 \newline
 }
-\KwOut{$A^{*}, E^{*}, \tau^{*}$}
+\KwOut{$L^{*}, S^{*}, \tau^{*}$}
+\label{alg:RASL}
 \end{algorithm}
 
 %-----------------------------------------------------------------------------------------------------------------------------------------------------------------
