added KKs conclusion

--- a/report/report/report.tex
+++ b/report/report/report.tex
@@ -32,6 +32,10 @@
 \input{../applications/applications.tex}
 
 %============================================================================================
+\input{conclusion.tex}
+
+
+%============================================================================================
 \newpage
 \bibliographystyle{abbrv}
 \bibliography{../../common/RobustPCA}
