add discussion to RASL in related.tex

--- a/common/RobustPCA.bib
+++ b/common/RobustPCA.bib
@@ -671,3 +671,19 @@ The analysis relies on showing how the dual certificates from the fully observer
 	Title = {RASL: Robust alignment by sparse and low-rank decomposition for linearly correlated images},
 	Year = {2010},
 	Bdsk-Url-1 = {http://dx.doi.org/10.1109/CVPR.2010.5540138}}
+	
+
+@article{Jittorntrum:1980qy,
+	Author = {Krisorn Jittorntrum and M. R. Osborne},
+	Date-Added = {2012-04-30 22:45:19 -0700},
+	Date-Modified = {2012-04-30 22:45:19 -0700},
+	Doi = {10.1007/BF01403680},
+	Journal = {Numerische Mathematik},
+	Number = {4},
+	Pages = {439--455},
+	Title = {Strong uniqueness and second order convergence in nonlinear discrete approximation},
+	Volume = {34},
+	Year = {1980},
+	Bdsk-Url-1 = {http://www.springerlink.com/content/t308m22q3707q174/fulltext.pdf},
+	Bdsk-Url-2 = {http://dx.doi.org/10.1007/BF01403680}}
+
