--- a/common/RobustPCA.bib
+++ b/common/RobustPCA.bib
@@ -686,4 +686,25 @@ The analysis relies on showing how the dual certificates from the fully observer
 	Year = {1980},
 	Bdsk-Url-1 = {http://www.springerlink.com/content/t308m22q3707q174/fulltext.pdf},
 	Bdsk-Url-2 = {http://dx.doi.org/10.1007/BF01403680}}
+	
+
+@article{Kim:2009,
+	Author = {Kim, Chanwoo and Stem, Richard M.},
+	Date-Added = {2012-05-01 18:02:56 -0700},
+	Date-Modified = {2012-05-01 18:06:40 -0700},
+	Journal = {10th Annual Conference of the International Speech Communication Association},
+	Pages = {28-31},
+	Title = {Feature extraction for robust speech recognition using a power-law nonlinearity and power-bias subtraction},
+	Year = {2009}}
+	
+
+@book{Young:2006fj,
+	Author = {S J Young and Evermann, G and Gales, M J F and Hain, T and Kershaw, D and Moore, G and Odell, J and Ollason, D and Povey, D and Valtchev, V and Woodland, P C"},
+	Date-Added = {2012-05-01 18:17:20 -0700},
+	Date-Modified = {2012-05-01 18:17:20 -0700},
+	Publisher = {Cambridge University Engineering Department},
+	Title = {The HTK Book, version 3.4},
+	Year = {2006}}
+
+
 
